<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FunApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_fix">Title</string>
    <string name="username_fix">Username: </string>
    <string name="password_fix">Password: </string>
    <string name="login_fix">LOGIN</string>
    <string name="change_my_password_fix">change my password</string>
    <string name="title_activity_next">NextActivity</string>
    <string name="welcome_to_your_homepage_fix">Welcome to your homepage!</string>
    <string name="change_your_homepage_background_fix">Change your homepage background</string>
    <string name="change_my_homepage_background_fix">Change my homepage background</string>
    <string name="press_fix">"PRess\n"</string>
    <string name="title_activity_next_next">NextNextActivity</string>
    <string name="gray_fix">gray</string>
    <string name="bright_fix">bright</string>
    <string name="dark_fix">dark</string>
    <string name="ceva_fix">ceva</string>
    <string name="change_picture_fix">change picture</string>
    <string name="change_password_fix">Change Password</string>
    <string name="title_activity_other">OtherActivity</string>
    <string name="old_password_fix">Old Password</string>
    <string name="new_password_fix">New Password</string>
    <string name="confirm_password_fix">Confirm Password</string>
    <string name="forgot_your_password">Forgot your password</string>
    <string name="sign_up">Sign up</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="attempts">Attempts</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="please_register_here_">Please, register here!</string>
    <string name="password">Password</string>
    <string name="back_to_my_homepage">Back to my Homepage</string>
    <string name="register_failed">Register Failed</string>
    <string name="name">Name</string>
    <string name="register_if_you_don_apos_t_have_an_account_">Register if you don&amp;apos;t have an account!</string>
    <string name="you_have_an_account_sign_in_">You have an account. Sign in!</string>
    <string name="signup">SignUp</string>
    <string name="login">LogIn</string>
    <string name="todo">TODO</string>
    <string name="old_password">Old Password</string>
    <string name="change_password">Change password</string>
    <string name="o_password">Old Password:</string>
    <string name="title_activity_login">Log In</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_homepage">Homepage</string>
    <string name="action_logout">Log out</string>
    <string name="sign_up_label">Sign up</string>
    <string name="password_label">Password:</string>
    <string name="txt_editablepassword">Password</string>
    <string name="already_have_an_account_label">Already have an account? Log in!</string>
    <string name="log_in_label">Log In</string>
    <string name="dont_have_an_account_label">&quot;Don't have an account? Register!&quot;</string>
    <string name="SignUp">Sign up</string>
    <string name="LogIn">Log in</string>
    <string name="Welcome">Welcome</string>
    <string name="title_welcome">Pug Life</string>
    <string name="image">image</string>
    <string name="saveprofile">Save profile</string>
    <string name="selectphoto">Select photo</string>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="weather">Weather</string>
    <string name="gettingData" Data...="" Getting=""></string>

</resources>