<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainR1"
    tools:context="${relativePackage}.${activityClass}" >

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ceva"
        android:contentDescription="@drawable/dogs_launcher"
        android:src="@drawable/dogs_launcher" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/welcome_to_your_homepage_fix" />

    <Button
        android:id="@+id/changeBgBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="22dp"
        android:text="@string/change_my_homepage_background_fix" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ceva"
        android:layout_marginLeft="42dp"
        android:layout_toRightOf="@+id/ceva"
        android:onClick="logout"
        android:text="@string/logout" />

    <Button
        android:id="@+id/ceva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/changeBgBtn"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/change_picture_fix" />

</RelativeLayout>