<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/change_password_button"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="43dp"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/new_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText1"
        android:layout_alignBottom="@+id/editText1"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:inputType="text"
        android:text="@string/new_password_fix" />

    <Button
        android:id="@+id/change_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignParentLeft="true"
        android:text="@string/change_password_fix" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="186dp"
        android:layout_toRightOf="@+id/new_pass"
        android:text="@string/cancel" />

</RelativeLayout>