<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" > 

    <ImageView
        android:id="@+id/image"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/background" 
        android:contentDescription="@string/todo"/>

    <Button
        android:id="@+id/SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="85dp"
        android:background="#33b5e5"
        android:minHeight="40dip"
        android:minWidth="75dip"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/signup"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <Button
        android:id="@+id/LogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/SignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:minHeight="47dp"
        android:minWidth="70dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textStyle="bold" />

</RelativeLayout>
